Trying to get github pages rendering

--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,6 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# pkgdown site
-docs/
 
 # translation temp files
 po/*~
@@ -49,3 +47,5 @@ po/*~
 rsconnect/
 
 /.quarto/
+
+.DS_Store
