--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: "Simulation of Potato Growth and Development"
+  title: "Data Publication of BRIWECS Consortium"
   type: website
   output-dir: docs
   
